3 course/translation methods/Lab3/parser/GrammarParser.js
// Generated from Grammar.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var GrammarListener = require('./GrammarListener').GrammarListener;
var GrammarVisitor = require('./GrammarVisitor').GrammarVisitor;

var grammarFileName = "Grammar.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'abstract'", "'assert'", "'boolean'", "'break'", 
                     "'byte'", "'case'", "'catch'", "'char'", "'class'", 
                     "'const'", "'continue'", "'default'", "'do'", "'double'", 
                     "'else'", "'enum'", "'extends'", "'final'", "'finally'", 
                     "'float'", "'for'", "'if'", "'goto'", "'implements'", 
                     "'import'", "'instanceof'", "'int'", "'interface'", 
                     "'long'", "'module'", "'native'", "'new'", "'null'", 
                     "'package'", "'private'", "'protected'", "'public'", 
                     "'return'", "'short'", "'static'", "'super'", "'switch'", 
                     "'synchronized'", "'this'", "'throw'", "'throws'", 
                     "'to'", "'transient'", "'try'", "'void'", "'volatile'", 
                     "'while'", null, null, null, null, null, null, null, 
                     null, "'''", "'\"'", "'.'", "','", "'('", "')'", "'{'", 
                     "'}'", "'['", "']'", "':'", "';'", "'='", "'->'", "'+'", 
                     "'-'", "'/'", "'*'", "'%'", "'++'", "'--'", "'&'", 
                     "'|'", null, null, "'<'", "'>'", null, null, null, 
                     null, "'!'", "'?'" ];

var symbolicNames = [ null, "ABSTRACT", "ASSERT", "BOOLEAN", "BREAK", "BYTE", 
                      "CASE", "CATCH", "CHAR", "CLASS", "CONST", "CONTINUE", 
                      "DEFAULT", "DO", "DOUBLE", "ELSE", "ENUM", "EXTENDS", 
                      "FINAL", "FINALLY", "FLOAT", "FOR", "IF", "GOTO", 
                      "IMPLEMENTS", "IMPORT", "INSTANCEOF", "INT", "INTERFACE", 
                      "LONG", "MODULE", "NATIVE", "NEW", "NULL", "PACKAGE", 
                      "PRIVATE", "PROTECTED", "PUBLIC", "RETURN", "SHORT", 
                      "STATIC", "SUPER", "SWITCH", "SYNCHRONIZED", "THIS", 
                      "THROW", "THROWS", "TO", "TRANSIENT", "TRY", "VOID", 
                      "VOLATILE", "WHILE", "TYPE", "INTEGER_VALUE", "DOUBLE_VALUE", 
                      "BOOLEAN_VALUE", "STRING_VALUE", "CLASS_IDENTIFIER", 
                      "IDENTIFIER", "WS", "QUOT", "QUOT_TWO", "DOT", "COMMA", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LSQUARE", 
                      "RSQUARE", "COLON", "SEMICOLON", "ASSIGN", "ARROW", 
                      "PLUS", "MINUS", "DIV", "MUL", "MOD", "INC", "DEC", 
                      "BITAND", "BITOR", "OR", "AND", "LT", "GT", "LE", 
                      "GE", "EQ", "NOT_EQ", "NOT", "Q_MARK" ];

var ruleNames =  [ "compilationUnit", "primitive", "primitiveType", "referenceType", 
                   "classType", "variableType", "arrayType", "brackets_square", 
                   "typeParameter", "typeBound", "argumentsType", "typeArgumentList", 
                   "typeArgument", "wildcard", "wildcardBounds", "string_dot_splitted", 
                   "argumentList", "methodName", "packageDeclaration", "importDeclaration", 
                   "classDeclaration", "classModifier", "typeParameters", 
                   "typeArgumentsOrEmpty", "typeParameterList", "superclass", 
                   "superinterfaces", "classTypeList", "classBody", "classMemberDeclaration", 
                   "fieldDeclaration", "fieldModifier", "variableDeclaratorList", 
                   "variableDeclarator", "variableDeclaratorId", "variableInitializer", 
                   "methodDeclaration", "methodModifier", "methodHeader", 
                   "result", "methodDeclarator", "formalParameterList", 
                   "formalParameter", "variableModifier", "throws_", "exceptionTypeList", 
                   "exceptionType", "methodBody", "constructorDeclaration", 
                   "constructorModifier", "constructorDeclarator", "constructorBody", 
                   "explicitConstructorInvocation", "arrayInitializer", 
                   "variableInitializerList", "block", "localVariableDeclaration", 
                   "statement", "statementWithoutTrailingSubstatement", 
                   "expressionStatement", "statementExpression", "ifStatement", 
                   "whileStatement", "forStatement", "breakStatement", "continueStatement", 
                   "returnStatement", "expression", "assignment", "assignmentOperator", 
                   "conditionalExpression", "conditionalOrExpression", "conditionalAndExpression", 
                   "relationalExpression", "additiveExpression", "multiplicativeExpression", 
                   "unaryExpression", "incOrDecExpression", "methodInvocation", 
                   "classInstanceCreationExpression" ];

function GrammarParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

GrammarParser.prototype = Object.create(antlr4.Parser.prototype);
GrammarParser.prototype.constructor = GrammarParser;

Object.defineProperty(GrammarParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

GrammarParser.EOF = antlr4.Token.EOF;
GrammarParser.ABSTRACT = 1;
GrammarParser.ASSERT = 2;
GrammarParser.BOOLEAN = 3;
GrammarParser.BREAK = 4;
GrammarParser.BYTE = 5;
GrammarParser.CASE = 6;
GrammarParser.CATCH = 7;
GrammarParser.CHAR = 8;
GrammarParser.CLASS = 9;
GrammarParser.CONST = 10;
GrammarParser.CONTINUE = 11;
GrammarParser.DEFAULT = 12;
GrammarParser.DO = 13;
GrammarParser.DOUBLE = 14;
GrammarParser.ELSE = 15;
GrammarParser.ENUM = 16;
GrammarParser.EXTENDS = 17;
GrammarParser.FINAL = 18;
GrammarParser.FINALLY = 19;
GrammarParser.FLOAT = 20;
GrammarParser.FOR = 21;
GrammarParser.IF = 22;
GrammarParser.GOTO = 23;
GrammarParser.IMPLEMENTS = 24;
GrammarParser.IMPORT = 25;
GrammarParser.INSTANCEOF = 26;
GrammarParser.INT = 27;
GrammarParser.INTERFACE = 28;
GrammarParser.LONG = 29;
GrammarParser.MODULE = 30;
GrammarParser.NATIVE = 31;
GrammarParser.NEW = 32;
GrammarParser.NULL = 33;
GrammarParser.PACKAGE = 34;
GrammarParser.PRIVATE = 35;
GrammarParser.PROTECTED = 36;
GrammarParser.PUBLIC = 37;
GrammarParser.RETURN = 38;
GrammarParser.SHORT = 39;
GrammarParser.STATIC = 40;
GrammarParser.SUPER = 41;
GrammarParser.SWITCH = 42;
GrammarParser.SYNCHRONIZED = 43;
GrammarParser.THIS = 44;
GrammarParser.THROW = 45;
GrammarParser.THROWS = 46;
GrammarParser.TO = 47;
GrammarParser.TRANSIENT = 48;
GrammarParser.TRY = 49;
GrammarParser.VOID = 50;
GrammarParser.VOLATILE = 51;
GrammarParser.WHILE = 52;
GrammarParser.TYPE = 53;
GrammarParser.INTEGER_VALUE = 54;
GrammarParser.DOUBLE_VALUE = 55;
GrammarParser.BOOLEAN_VALUE = 56;
GrammarParser.STRING_VALUE = 57;
GrammarParser.CLASS_IDENTIFIER = 58;
GrammarParser.IDENTIFIER = 59;
GrammarParser.WS = 60;
GrammarParser.QUOT = 61;
GrammarParser.QUOT_TWO = 62;
GrammarParser.DOT = 63;
GrammarParser.COMMA = 64;
GrammarParser.LPAREN = 65;
GrammarParser.RPAREN = 66;
GrammarParser.LBRACE = 67;
GrammarParser.RBRACE = 68;
GrammarParser.LSQUARE = 69;
GrammarParser.RSQUARE = 70;
GrammarParser.COLON = 71;
GrammarParser.SEMICOLON = 72;
GrammarParser.ASSIGN = 73;
GrammarParser.ARROW = 74;
GrammarParser.PLUS = 75;
GrammarParser.MINUS = 76;
GrammarParser.DIV = 77;
GrammarParser.MUL = 78;
GrammarParser.MOD = 79;
GrammarParser.INC = 80;
GrammarParser.DEC = 81;
GrammarParser.BITAND = 82;
GrammarParser.BITOR = 83;
GrammarParser.OR = 84;
GrammarParser.AND = 85;
GrammarParser.LT = 86;
GrammarParser.GT = 87;
GrammarParser.LE = 88;
GrammarParser.GE = 89;
GrammarParser.EQ = 90;
GrammarParser.NOT_EQ = 91;
GrammarParser.NOT = 92;
GrammarParser.Q_MARK = 93;

GrammarParser.RULE_compilationUnit = 0;
GrammarParser.RULE_primitive = 1;
GrammarParser.RULE_primitiveType = 2;
GrammarParser.RULE_referenceType = 3;
GrammarParser.RULE_classType = 4;
GrammarParser.RULE_variableType = 5;
GrammarParser.RULE_arrayType = 6;
GrammarParser.RULE_brackets_square = 7;
GrammarParser.RULE_typeParameter = 8;
GrammarParser.RULE_typeBound = 9;
GrammarParser.RULE_argumentsType = 10;
GrammarParser.RULE_typeArgumentList = 11;
GrammarParser.RULE_typeArgument = 12;
GrammarParser.RULE_wildcard = 13;
GrammarParser.RULE_wildcardBounds = 14;
GrammarParser.RULE_string_dot_splitted = 15;
GrammarParser.RULE_argumentList = 16;
GrammarParser.RULE_methodName = 17;
GrammarParser.RULE_packageDeclaration = 18;
GrammarParser.RULE_importDeclaration = 19;
GrammarParser.RULE_classDeclaration = 20;
GrammarParser.RULE_classModifier = 21;
GrammarParser.RULE_typeParameters = 22;
GrammarParser.RULE_typeArgumentsOrEmpty = 23;
GrammarParser.RULE_typeParameterList = 24;
GrammarParser.RULE_superclass = 25;
GrammarParser.RULE_superinterfaces = 26;
GrammarParser.RULE_classTypeList = 27;
GrammarParser.RULE_classBody = 28;
GrammarParser.RULE_classMemberDeclaration = 29;
GrammarParser.RULE_fieldDeclaration = 30;
GrammarParser.RULE_fieldModifier = 31;
GrammarParser.RULE_variableDeclaratorList = 32;
GrammarParser.RULE_variableDeclarator = 33;
GrammarParser.RULE_variableDeclaratorId = 34;
GrammarParser.RULE_variableInitializer = 35;
GrammarParser.RULE_methodDeclaration = 36;
GrammarParser.RULE_methodModifier = 37;
GrammarParser.RULE_methodHeader = 38;
GrammarParser.RULE_result = 39;
GrammarParser.RULE_methodDeclarator = 40;
GrammarParser.RULE_formalParameterList = 41;
GrammarParser.RULE_formalParameter = 42;
GrammarParser.RULE_variableModifier = 43;
GrammarParser.RULE_throws_ = 44;
GrammarParser.RULE_exceptionTypeList = 45;
GrammarParser.RULE_exceptionType = 46;
GrammarParser.RULE_methodBody = 47;
GrammarParser.RULE_constructorDeclaration = 48;
GrammarParser.RULE_constructorModifier = 49;
GrammarParser.RULE_constructorDeclarator = 50;
GrammarParser.RULE_constructorBody = 51;
GrammarParser.RULE_explicitConstructorInvocation = 52;
GrammarParser.RULE_arrayInitializer = 53;
GrammarParser.RULE_variableInitializerList = 54;
GrammarParser.RULE_block = 55;
GrammarParser.RULE_localVariableDeclaration = 56;
GrammarParser.RULE_statement = 57;
GrammarParser.RULE_statementWithoutTrailingSubstatement = 58;
GrammarParser.RULE_expressionStatement = 59;
GrammarParser.RULE_statementExpression = 60;
GrammarParser.RULE_ifStatement = 61;
GrammarParser.RULE_whileStatement = 62;
GrammarParser.RULE_forStatement = 63;
GrammarParser.RULE_breakStatement = 64;
GrammarParser.RULE_continueStatement = 65;
GrammarParser.RULE_returnStatement = 66;
GrammarParser.RULE_expression = 67;
GrammarParser.RULE_assignment = 68;
GrammarParser.RULE_assignmentOperator = 69;
GrammarParser.RULE_conditionalExpression = 70;
GrammarParser.RULE_conditionalOrExpression = 71;
GrammarParser.RULE_conditionalAndExpression = 72;
GrammarParser.RULE_relationalExpression = 73;
GrammarParser.RULE_additiveExpression = 74;
GrammarParser.RULE_multiplicativeExpression = 75;
GrammarParser.RULE_unaryExpression = 76;
GrammarParser.RULE_incOrDecExpression = 77;
GrammarParser.RULE_methodInvocation = 78;
GrammarParser.RULE_classInstanceCreationExpression = 79;


function CompilationUnitContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GrammarParser.RULE_compilationUnit;
    return this;
}

CompilationUnitContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
CompilationUnitContext.prototype.constructor = CompilationUnitContext;

CompilationUnitContext.prototype.classDeclaration = function() {
    return this.getTypedRuleContext(ClassDeclarationContext,0);
};

CompilationUnitContext.prototype.EOF = function() {
    return this.getToken(GrammarParser.EOF, 0);
};

CompilationUnitContext.prototype.packageDeclaration = function() {
    return this.getTypedRuleContext(PackageDeclarationContext,0);
};

CompilationUnitContext.prototype.importDeclaration = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ImportDeclarationContext);
    } else {
        return this.getTypedRuleContext(ImportDeclarationContext,i);
    }
};

CompilationUnitContext.prototype.enterRule = function(listener) {
    if(listener instanceof GrammarListener ) {
        listener.enterCompilationUnit(this);
	}
};

CompilationUnitContext.prototype.exitRule = function(listener) {
    if(listener instanceof GrammarListener ) {
        listener.exitCompilationUnit(this);
	}
};

CompilationUnitContext.prototype.accept = function(visitor) {
    if ( visitor instanceof GrammarVisitor ) {
        return visitor.visitCompilationUnit(this);
    } else {
        return visitor.visitChildren(this);
    }
};




GrammarParser.CompilationUnitContext = CompilationUnitContext;

GrammarParser.prototype.compilationUnit = function() {

    var localctx = new CompilationUnitContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, GrammarParser.RULE_compilationUnit);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 161;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===GrammarParser.PACKAGE) {
            this.state = 160;
            this.packageDeclaration();
        }

        this.state = 166;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===GrammarParser.IMPORT) {
            this.state = 163;
            this.importDeclaration();
            this.state = 168;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 169;
        this.classDeclaration();
        this.state = 170;
        this.match(GrammarParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function PrimitiveContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GrammarParser.RULE_primitive;
    return this;
}

PrimitiveContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PrimitiveContext.prototype.constructor = PrimitiveContext;

PrimitiveContext.prototype.INTEGER_VALUE = function() {
    return this.getToken(GrammarParser.INTEGER_VALUE, 0);
};

PrimitiveContext.prototype.DOUBLE_VALUE = function() {
    return this.getToken(GrammarParser.DOUBLE_VALUE, 0);
};

PrimitiveContext.prototype.BOOLEAN_VALUE = function() {
    return this.getToken(GrammarParser.BOOLEAN_VALUE, 0);
};

PrimitiveContext.prototype.STRING_VALUE = function() {
    return this.getToken(GrammarParser.STRING_VALUE, 0);
};

PrimitiveContext.prototype.NULL = function() {
    return this.getToken(GrammarParser.NULL, 0);
};

PrimitiveContext.prototype.enterRule = function(listener) {
    if(listener instanceof GrammarListener ) {
        listener.enterPrimitive(this);
	}
};

PrimitiveContext.prototype.exitRule = function(listener) {
    if(listener instanceof GrammarListener ) {
        listener.exitPrimitive(this);
	}
};

PrimitiveContext.prototype.accept = function(visitor) {
    if ( visitor instanceof GrammarVisitor ) {
        return visitor.visitPrimitive(this);
    } else {
        return visitor.visitChildren(this);
    }
};




GrammarParser.PrimitiveContext = PrimitiveContext;

GrammarParser.prototype.primitive = function() {

    var localctx = new PrimitiveContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, GrammarParser.RULE_primitive);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 172;
        _la = this._input.LA(1);
        if(!(((((_la - 33)) & ~0x1f) == 0 && ((1 << (_la - 33)) & ((1 << (GrammarParser.NULL - 33)) | (1 << (GrammarParser.INTEGER_VALUE - 33)) | (1 << (GrammarParser.DOUBLE_VALUE - 33)) | (1 << (GrammarParser.BOOLEAN_VALUE - 33)) | (1 << (GrammarParser.STRING_VALUE - 33)))) !== 0))) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function PrimitiveTypeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GrammarParser.RULE_primitiveType;
    return this;
}

PrimitiveTypeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PrimitiveTypeContext.prototype.constructor = PrimitiveTypeContext;

PrimitiveTypeContext.prototype.BYTE = function() {
    return this.getToken(GrammarParser.BYTE, 0);
};

PrimitiveTypeContext.prototype.SHORT = function() {
    return this.getToken(GrammarParser.SHORT, 0);
};

PrimitiveTypeContext.prototype.INT = function() {
    return this.getToken(GrammarParser.INT, 0);
};

PrimitiveTypeContext.prototype.LONG = function() {
    return this.getToken(GrammarParser.LONG, 0);
};

PrimitiveTypeContext.prototype.CHAR = function() {
    return this.getToken(GrammarParser.CHAR, 0);
};

PrimitiveTypeContext.prototype.FLOAT = function() {
    return this.getToken(GrammarParser.FLOAT, 0);
};

PrimitiveTypeContext.prototype.DOUBLE = function() {
    return this.getToken(GrammarParser.DOUBLE, 0);
};

PrimitiveTypeContext.prototype.BOOLEAN = function() {
    return this.getToken(GrammarParser.BOOLEAN, 0);
};

PrimitiveTypeContext.prototype.enterRule = function(listener) {
    if(listener instanceof GrammarListener ) {
        listener.enterPrimitiveType(this);
	}
};

PrimitiveTypeContext.prototype.exitRule = function(listener) {
    if(listener instanceof GrammarListener ) {
        listener.exitPrimitiveType(this);
	}
};

PrimitiveTypeContext.prototype.accept = function(visitor) {
    if ( visitor instanceof GrammarVisitor ) {
        return visitor.visitPrimitiveType(this);
    } else {
        return visitor.visitChildren(this);
    }
};




GrammarParser.PrimitiveTypeContext = PrimitiveTypeContext;

GrammarParser.prototype.primitiveType = function() {

    var localctx = new PrimitiveTypeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, GrammarParser.RULE_primitiveType);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 174;
        _la = this._input.LA(1);
        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << GrammarParser.BOOLEAN) | (1 << GrammarParser.BYTE) | (1 << GrammarParser.CHAR) | (1 << GrammarParser.DOUBLE) | (1 << GrammarParser.FLOAT) | (1 << GrammarParser.INT) | (1 << GrammarParser.LONG))) !== 0) || _la===GrammarParser.SHORT)) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ReferenceTypeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GrammarParser.RULE_referenceType;
    return this;
}

ReferenceTypeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ReferenceTypeContext.prototype.constructor = ReferenceTypeContext;

ReferenceTypeContext.prototype.classType = function() {
    return this.getTypedRuleContext(ClassTypeContext,0);
};

ReferenceTypeContext.prototype.variableType = function() {
    return this.getTypedRuleContext(VariableTypeContext,0);
};

ReferenceTypeContext.prototype.arrayType = function() {
    return this.getTypedRuleContext(ArrayTypeContext,0);
};

ReferenceTypeContext.prototype.enterRule = function(listener) {
    if(listener instanceof GrammarListener ) {
        listener.enterReferenceType(this);
	}
};

ReferenceTypeContext.prototype.exitRule = function(listener) {
    if(listener instanceof GrammarListener ) {
        listener.exitReferenceType(this);
	}
};

ReferenceTypeContext.prototype.accept = function(visitor) {
    if ( visitor instanceof GrammarVisitor ) {
        return visitor.visitReferenceType(this);
    } else {
        return visitor.visitChildren(this);
    }
};




GrammarParser.ReferenceTypeContext = ReferenceTypeContext;

GrammarParser.prototype.referenceType = function() {
